[package]
name = "drax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Default dependencies
pin-project-lite = "0.2.9"
tokio-test = { version = "0.4.2", optional = true }

# Encryption
cfb8 = { version = "0.8.1", optional = true }
aes = { version = "0.8.2", optional = true }

# NBT
cesu8 = { version = "1.1.0", optional = true }

[dependencies.serde]
version = "1"
optional = true
default-features = false

[dependencies.serde_json]
version = "1"
optional = true
features = ["std"]
default-features = false

[dependencies.tokio]
version = "1.20.1"
features = ["io-std", "io-util"]
default-features = false

[features]
test = ["tokio/macros", "tokio/rt", "dep:tokio-test", "tokio/rt-multi-thread"]

default = ["encryption", "serde", "macros"]

encryption = ["cfb8", "aes"]
nbt = ["cesu8"]
serde = ["dep:serde", "serde_json"]
macros = []

tcp-shield = []

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

[[bench]]
name = "sample_function_benchmark"
harness = false
