[package]
name = "drax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { version = "1.20.1", features = ["io-std", "io-util"], default-features = false }
typemap = "0.3.3"
cfb8 = { version = "0.7.1", optional = true }
aes = { version = "0.7.5", optional = true }
pin-project-lite = "0.2.9"
tokio-test = { version = "0.4.2", optional = true }

[features]
full = ["encryption"]

encryption = ["dep:cfb8", "dep:aes"]

dev = ["full", "footprints"]
footprints = []

test = ["full", "tokio/macros", "tokio/rt", "dep:tokio-test"]
