[package]
name = "drax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
tokio = { version = "1.20.1", features = ["io-std", "io-util"], default-features = false }
typemap = "0.3.3"
cfb8 = { version = "0.7.1", optional = true }
aes = { version = "0.7.5", optional = true }
pin-project-lite = "0.2.9"
tokio-test = { version = "0.4.2", optional = true }
flate2 = { version = "1.0.23", optional = true, features = ["zlib"] }
bytes = "1.2.1"
serde = "1.0.144"
serde_json = "1.0.85"
uuid = "1.1.2"
byteorder = "1.4.3"
cesu8 = "1.1.0"
log = "0.4.17"

[features]
full = ["encryption", "compression", "pipelines"]

encryption = ["dep:cfb8", "dep:aes"]
compression = ["dep:flate2"]
pipelines = []

dev = ["full", "footprints"]
footprints = []

test = ["full", "tokio/macros", "tokio/rt", "dep:tokio-test"]
