[package]
name = "status_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
drax = { path = "../../drax_core", features = ["dev"] }
drax_derive = { path = "../../drax_derive" }
anyhow = "1.0.64"
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
uuid = {version = "1.1.2", features = ["serde"]}
